--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -20,9 +20,9 @@
   // &#accessibility--color-blindness { background-image: url("../../img/accessibility--color-blindness.png"); }
   // &#accessibility--touch-targets { background-image: url("../../img/accessibility--touch-targets.png"); padding-bottom: 19%; }
   //
-  // &#actions--action-verb { background-image: url("../../img/actions--action-verb.png"); padding-bottom: 19%; }
-  // &#actions--hierarchy { background-image: url("../../img/actions--hierarchy.png"); padding-bottom: 13%; }
-  // &#actions--color { background-image: url("../../img/actions--color.png"); padding-bottom: 13%; }
+  &#actions--action-verb { background-image: url("../../img/actions--action-verb.png"); padding-bottom: 19%; }
+  &#actions--hierarchy { background-image: url("../../img/actions--hierarchy.png"); padding-bottom: 13%; }
+  &#actions--color { background-image: url("../../img/actions--color.png"); padding-bottom: 13%; }
   //
   // &#navigation--basic {
   //   background-image: url("../../img/navigation--basic.svg");
