add code for cards and checkboxes

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .content-container {
-  margin-top: 1rem;
+  margin: 1rem 0 1rem 0;
 }
 
 .example-sidebar {
@@ -211,6 +211,12 @@ body {
       color: $white;
       content: "Hide Code";
     }
+  }
+}
+
+.group-open {
+  ~.language-scss {
+    display: block;
   }
 }
 
