--- a/src/sass/example-page/typography.scss
+++ b/src/sass/example-page/typography.scss
@@ -4,7 +4,7 @@
 p {
   color: #424242;
   //margin-top: 0;
-  margin-bottom: 1.7rem;
+  //margin-bottom: 1.7rem;
   line-height: 1.7rem;
 }
 
@@ -15,6 +15,8 @@ p {
 .intro {
   font-size: 1.25rem;
   line-height: 2rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
 }
 
 .definition {
