Add forms code section

--- a/src/sass/example-page/prism.scss
+++ b/src/sass/example-page/prism.scss
@@ -80,17 +80,16 @@ $tablet:        "all and (min-width: 40em)" !default;
 
 code[class*="language-"],
 pre[class*="language-"] {
-	transition: line-height 0.3s;
 	border-radius: 5px;
   color: $white;
   font-family: monaco, 'Inconsolata', sans-serif;
   font-size: 0.8rem;
   font-weight: 600;
-	line-height: 0rem;
+	display: none;
   padding: 0;
   top: 0;
   position: relative;
-  margin: 0.5rem 0 4rem 0;
+  line-height: 1.4rem;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
@@ -101,7 +100,7 @@ pre[class*="language-"] {
 	-ms-hyphens: none;
 	hyphens: none;
 	&.show {
-		line-height: 1.4rem;
+		display: block;
 	}
 }
 
@@ -111,8 +110,6 @@ pre[class*="language-"] {
 	margin: 0 0 1rem 0;
 	overflow: auto;
 	border-radius: 0 0 0.3rem 0.3rem;
-	top: -2rem;
-  z-index: -1;
 
 	&:before {
 		content: "";
@@ -123,11 +120,6 @@ pre[class*="language-"] {
 		padding: 0.2rem 0.2rem 0.3rem;
 		position: absolute;
 		top: 0.5rem; right: 0.5rem;
-	}
-
-	&.show {
-		top: 0;
-    z-index: 1;
 	}
 }
 
