--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -24,36 +24,36 @@
   &#actions--hierarchy { background-image: url("../../img/actions--hierarchy.png"); padding-bottom: 13%; }
   &#actions--color { background-image: url("../../img/actions--color.png"); padding-bottom: 13%; }
   //
-  // &#navigation--basic {
-  //   background-image: url("../../img/navigation--basic.svg");
-  //   padding-bottom: 19%;
-  // }
-  //
-  // &#navigation--color {
-  //   background-image: url("../../img/navigation--color.svg");
-  //   padding-bottom: 19%;
-  // }
-  //
-  // &#navigation--links {
-  //   background-image: url("../../img/navigation--links.svg");
-  //   padding-bottom: 19%;
-  // }
-  //
-  // &#navigation--back {
-  //   background-image: url("../../img/navigation--back.svg");
-  //   padding-bottom: 23%;
-  // }
-  // &#navigation--banner {
-  //   background-image: url("../../img/navigation--banner.svg");
-  //   padding-bottom: 23%;
-  // }
-  //
-  // &#navigation--tabs { background-image: url("../../img/navigation--tabs.svg"); }
-  // &#navigation--tabs_code {
-  //   background-image: url("../../img/navigation--tabs_code.svg");
-  //   padding-bottom: 23%;
-  // }
-  //
+  &#navigation--basic {
+    background-image: url("../../img/navigation--basic.svg");
+    padding-bottom: 19%;
+  }
+
+  &#navigation--color {
+    background-image: url("../../img/navigation--color.svg");
+    padding-bottom: 19%;
+  }
+
+  &#navigation--links {
+    background-image: url("../../img/navigation--links.svg");
+    padding-bottom: 19%;
+  }
+
+  &#navigation--back {
+    background-image: url("../../img/navigation--back.svg");
+    padding-bottom: 23%;
+  }
+  &#navigation--banner {
+    background-image: url("../../img/navigation--banner.svg");
+    padding-bottom: 23%;
+  }
+
+  &#navigation--tabs { background-image: url("../../img/navigation--tabs.svg"); }
+  &#navigation--tabs_code {
+    background-image: url("../../img/navigation--tabs_code.svg");
+    padding-bottom: 23%;
+  }
+  
   // &#tags--options { background-image: url("../../img/tags--options.png"); padding-bottom: 13%; }
   //
   // &#tooltip--large {
