Add tags code and guidelines

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -216,10 +216,10 @@ body {
 }
 
 .group-open {
-  ~.language-scss {
+  +.language-scss {
     display: block;
   }
-  ~.language-scss code[class*="language-"] {
+  +.language-scss code[class*="language-"] {
     display: block;
   }
 }
