--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -53,8 +53,8 @@
     background-image: url("../../img/navigation--tabs_code.svg");
     padding-bottom: 23%;
   }
-  
-  // &#tags--options { background-image: url("../../img/tags--options.png"); padding-bottom: 13%; }
+
+  &#tags--options { background-image: url("../../img/tags--options.png"); padding-bottom: 13%; }
   //
   // &#tooltip--large {
   //   background-image: url("../../img/tooltip--large.svg");
