Fix broken links in Cards

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -396,10 +396,8 @@ blockquote {
     &.active { border-bottom-color: #FFFFFF; opacity: 1; color: #FFFFFF !important; }
   }
 }
-.example-button--navigation {
-  &::before {
-    color: #FFFFFF;
-  }
+.app-menu .app-context .app-title .button--navigation.example-button--navigation:before {
+  color: #FFFFFF !important;
 }
 
 .hide-HTML-code {
