--- a/src/sass/example-page/prism.scss
+++ b/src/sass/example-page/prism.scss
@@ -273,3 +273,8 @@ pre.line-numbers > code {
 	padding-right: 0.8em;
 	text-align: right;
 }
+
+.language-bash {
+	display: block !important;
+	border-radius: 5px !important;
+}
