Start of principles page

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -104,6 +104,45 @@ body {
   }
 }
 
+
+/* Principles
+  ================================================== */
+
+.splash-image {
+  background-image: linear-gradient(-45deg, $blue , $purple);
+  height: 22rem;
+  margin-top: -1rem;
+  padding: 1rem;
+  position: relative;
+  .splash-image--content {
+    display: flex;
+    height: 100%;
+  }
+  .splash-image--title {
+    margin-bottom: 0.5rem;
+    color: $white;
+  }
+  .splash-image--subtitle {
+    margin-bottom: 1rem;
+    color: $white;
+  }
+  .splash-image--title { font-size: 3rem; }
+  button {
+
+  }
+}
+
+.space-between--principles {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  .principles-icon {
+    height: 120px;
+    width: 120px;
+    background-color: gray;
+  }
+}
+
 .app-content {
   background-color: $white;
   @media all and (min-width: 40em) {
@@ -138,12 +177,14 @@ body {
   }
 }
 
-//Sidebar Icon
+/* Sidebar Icon
+  ================================================== */
+
 .mobile-sidebar {
   .button--sidebar-icon {
     border-radius: 5px 0 0 5px;
     background-color: $gray-100;
-    position: absolute;
+    position: fixed;
     top: 1.9rem;
     right: 0;
     transition: right 0.3s;
@@ -170,67 +211,8 @@ body {
   }
 }
 
-//code toggle
-.code-toggle {
-  background-color: $gray-150;
-  border-radius: 0 0 5px 5px;
-  cursor: pointer;
-  display: block;
-  width: 100%;
-  padding: 0.5rem 0;
-  text-align: center;
-  transition: all .2s ease-in-out;
-
-  .icon--code {
-    background-image: url(../../img/icon--code_light.svg);
-    width: 16px;
-    height: 16px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    display: inline-block;
-    margin: 0 0.1rem -0.1rem 0;
-  }
-
-  &:hover {
-    background-color: #313538;
-    &:after { color: $white; }
-    .icon--code {
-      background-image: url(../../img/icon--code.svg);
-    }
-  }
-
-  &:after {
-    content: "Show Code";
-    color: $gray-900;
-  }
-
-  &.is-open {
-    background-color: #313538;
-    border-radius: 0;
-    .icon--code { background-image: url(../../img/icon--code.svg); }
-    &:after {
-      color: $white;
-      content: "Hide Code";
-    }
-  }
-}
-
-.group-open {
-  +.language-scss {
-    display: block;
-  }
-  +.language-scss code[class*="language-"] {
-    display: block;
-  }
-}
-
-.code {
-  display: none;
-  overflow: hidden;
-   &.show {
-     display: block;
-   }
-}
+/* Copy Link Button
+  ================================================== */
 
 h2 {
   .button--copy-link {
@@ -270,6 +252,9 @@ h2 {
   }
 }
 
+/* Blockquotes
+  ================================================== */
+
 blockquote {
   border-left: 4px solid $gray;
   margin: 0 0 2rem 0;
@@ -305,7 +290,9 @@ blockquote {
   width: 50px;
 }
 
-//Banner
+/* Banner Page
+  ================================================== */
+
 .banner-container {
   .card-banner {
     margin: 0;
@@ -313,7 +300,9 @@ blockquote {
   }
 }
 
-//Cards
+/* Cards Page
+  ================================================== */
+
 .card--example-footer {
   border-radius: 0 0 10px 10px;
   margin: 0;
@@ -330,7 +319,8 @@ blockquote {
   }
 }
 
-//Checkboxes
+/* Checkboxes Page
+  ================================================== */
 
 .example--checkbox {
   display: inline-flex;
@@ -338,7 +328,9 @@ blockquote {
   line-height: 1.5rem;
 }
 
-//Grid Example Styles
+/* Grid Page
+  ================================================== */
+
 .row--example {
   background-color: rgba(157, 192, 255, 0.5);
   margin: 2rem auto;
@@ -360,7 +352,9 @@ blockquote {
 }
 .column--nested.column--example { margin: 0; }
 
-//Icons Example Page
+/* Icons Page
+  ================================================== */
+
 .example--container {
   display: block;
   margin: auto;
@@ -388,7 +382,9 @@ blockquote {
   margin-top: 1rem;
 }
 
-//Navigation
+/* Navigation Page
+  ================================================== */
+
 .example-page--app-navigation {
   li a {
     color: #FFFFFF !important;
@@ -416,7 +412,9 @@ blockquote {
   }
 }
 
-//Radio
+/* Radio Buttons Page
+  ================================================== */
+
 .example--radio {
   display: inline-block;
   margin-right: 2rem;
