--- a/src/sass/example-page/prism.scss
+++ b/src/sass/example-page/prism.scss
@@ -278,3 +278,65 @@ pre.line-numbers > code {
 	display: block !important;
 	border-radius: 5px !important;
 }
+
+//code toggle
+.code-toggle {
+  background-color: $gray-150;
+  border-radius: 0 0 5px 5px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  padding: 0.5rem 0;
+  text-align: center;
+  transition: all .2s ease-in-out;
+
+  .icon--code {
+    background-image: url(../../img/icon--code_light.svg);
+    width: 16px;
+    height: 16px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin: 0 0.1rem -0.1rem 0;
+  }
+
+  &:hover {
+    background-color: #313538;
+    &:after { color: $white; }
+    .icon--code {
+      background-image: url(../../img/icon--code.svg);
+    }
+  }
+
+  &:after {
+    content: "Show Code";
+    color: $gray-900;
+  }
+
+  &.is-open {
+    background-color: #313538;
+    border-radius: 0;
+    .icon--code { background-image: url(../../img/icon--code.svg); }
+    &:after {
+      color: $white;
+      content: "Hide Code";
+    }
+  }
+}
+
+.group-open {
+  +.language-scss {
+    display: block;
+  }
+  +.language-scss code[class*="language-"] {
+    display: block;
+  }
+}
+
+.code {
+  display: none;
+  overflow: hidden;
+   &.show {
+     display: block;
+   }
+}
