--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -16,9 +16,9 @@
   padding-bottom: 43.5%; //auto-scale image container
   width: 100%;
 
-  // &#accessibility--contrast-ratios { background-image: url("../../img/accessibility--contrast-ratios.png"); }
-  // &#accessibility--color-blindness { background-image: url("../../img/accessibility--color-blindness.png"); }
-  // &#accessibility--touch-targets { background-image: url("../../img/accessibility--touch-targets.png"); padding-bottom: 19%; }
+  &#accessibility--contrast-ratios { background-image: url("../../img/accessibility--contrast-ratios.png"); }
+  &#accessibility--color-blindness { background-image: url("../../img/accessibility--color-blindness.png"); }
+  &#accessibility--touch-targets { background-image: url("../../img/accessibility--touch-targets.png"); padding-bottom: 19%; }
   //
   &#actions--action-verb { background-image: url("../../img/actions--action-verb.png"); padding-bottom: 19%; }
   &#actions--hierarchy { background-image: url("../../img/actions--hierarchy.png"); padding-bottom: 13%; }
