--- a/src/sass/base/mixins/_mixins.scss
+++ b/src/sass/base/mixins/_mixins.scss
@@ -15,6 +15,12 @@
   box-shadow: $value;
 }
 
+@mixin box-shadow--multiple($value1, $value2) {
+  -webkit-box-shadow: $value1, $value2;
+  -moz-box-shadow: $value1, $value2;
+  box-shadow: $value1, $value2;
+}
+
 @mixin transform($value) {
   -webkit-transform: $value;
   -moz-transform: $value;
