--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -3,11 +3,14 @@
 
 //TODO remove .card--header, .card--content, .card--footer with major release
 
+%card-shadow { @include box-shadow--multiple(0 1px 1px 0 rgba(60,64,67,.08), 0 1px 3px 1px rgba(60,64,67,.16)); }
+%card-shadow--hover { @include box-shadow--multiple(0 1px 3px 1px rgba(60,64,67,.2), 0 2px 8px 4px rgba(60,64,67,.1)); }
+
 .card {
   background-color: $white;
-  border: 2px solid $gray-200;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 1.5rem auto;
+  @extend %card-shadow;
 
   .card--header, &.card--content, &.card--footer,
   .card-header, &.card-content, &.card-footer {
@@ -22,7 +25,7 @@
     padding: $grid-gutter $grid-gutter 0 $grid-gutter;
     padding-bottom: 0;
     &.has-border {
-      border-bottom: 2px solid $gray-200;
+      border-bottom: 2px solid $gray-100;
       padding-bottom: $grid-gutter;
       +.card--content .card-banner,
       +.card-content .card-banner  {
@@ -41,7 +44,7 @@
   .card-footer {
     padding: 0 $grid-gutter $grid-gutter $grid-gutter;
     &.has-border {
-      border-top: 2px solid $gray-200;
+      border-top: 2px solid $gray-100;
       padding-top: $grid-gutter;
     }
   }
@@ -53,11 +56,11 @@
 
   //Use "is-selectable" to indicate a clickable card, add disabled or is-disabled to fade back the card
   &.is-selectable {
-    transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
     &:hover {
-      @extend %shadow-100; //Found in "_setup.scss"
-      border-color: $blue;
+      @extend %card-shadow--hover;
+      background-color: $gray-100;
       cursor: pointer;
     }
   }
@@ -69,11 +72,12 @@
     opacity: 0.4;
     pointer-events: none;
     background-color: $gray-200;
-    border-color: $gray-400;
+    box-shadow: none;
   }
 
   &.card--dashed {
-    border-style: dashed;
+    border: 2px dashed $gray-200;
+    box-shadow: none;
   }
 
   .card--narrow{
