--- a/src/sass/base/extendables/_extendables.scss
+++ b/src/sass/base/extendables/_extendables.scss
@@ -15,6 +15,9 @@
 %shadow-100 { @include box-shadow(0 4px 8px rgba(0,0,0, 0.3)); }
 %shadow-200 { @include box-shadow(0 4px 16px rgba(0,0,0, 0.3)); }
 %shadow-300 { @include box-shadow(0 4px 24px rgba(0,0,0, 0.3)); }
+%card-shadow { @include box-shadow--multiple(0 1px 1px 0 rgba(60,64,67,.08), 0 1px 3px 1px rgba(60,64,67,.16)); }
+%card-shadow--hover { @include box-shadow--multiple(0 1px 3px 1px rgba(60,64,67,.2), 0 2px 8px 4px rgba(60,64,67,.1)); }
+
 
 /* Action Extendables
   =========================================================================== */
