--- a/src/sass/modules/accordion/_accordion.scss
+++ b/src/sass/modules/accordion/_accordion.scss
@@ -1,6 +1,8 @@
 .accordion {
   border-radius: 5px;
   transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  background-color: $white;
+  overflow: hidden;
   @extend %card-shadow;
 
   .accordion--header {
@@ -8,6 +10,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
 
     i.accordion--arrow {
       transition: transform 0.1s linear;
@@ -26,6 +29,7 @@
     &:focus,
     &:hover {
       outline: none;
+      background-color: $gray-50;
     }
 
   }
@@ -42,5 +46,6 @@
 
   &.expanded {
     .accordion--header i.accordion--arrow { transform: rotate(90deg); }
+    .accordion--header:hover { background-color: none; }
   }
 }
