--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -47,3 +47,10 @@
 .text-color--purple { color: $purple; }
 .text-color--red { color: $red; }
 .text-color--yellow { color: $yellow; }
+
+//Flex utilities
+.space-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
