--- a/src/sass/modules/actions/_actions.scss
+++ b/src/sass/modules/actions/_actions.scss
@@ -47,6 +47,36 @@ $button-disabled: "&[disabled], &.disabled, &.button--disabled";
     pointer-events: none;
   }
 
+  //Ripple Effect
+  &.ripple {
+    position: relative;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
+      background-repeat: no-repeat;
+      background-position: 50%;
+      transform: scale(10, 10);
+      opacity: 0;
+      transition: transform .5s, opacity 1s;
+    }
+
+    &:active:after {
+      transform: scale(0, 0);
+      opacity: .3;
+      transition: 0s;
+    }
+  }
+
   &.button-block {
     display: block !important;
     width: 100%;
@@ -85,8 +115,8 @@ $button-disabled: "&[disabled], &.disabled, &.button--disabled";
     @include button($background-color: transparentize(white, 1), $color: $blue);
     @include transparent--button($color: $blue);
     &:not(.button--icon) { //Retains button--icon padding
-      padding-left: 0;
-      padding-right: 0;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
     }
 
     &.button--primary { @include transparent--button($color: $blue); }
