--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -80,4 +80,22 @@
   .card--narrow{
     max-width: 750px;
   }
+
+  .card--list, .card-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+     li {
+      padding: 0.75rem;
+      transition: $global-transition;
+    }
+     &.is-selectable {
+      li {
+        cursor: pointer;
+        &:hover {
+          background-color: $gray-100;
+        }
+      }
+    }
+  }
 }
