Update dashing to paragon

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -1,6 +1,6 @@
 $global-content-width: 800px !default;
 
-@import '../dashing';
+@import '../paragon';
 @import 'color';
 @import 'typography';
 @import 'image';
