--- a/src/sass/paragon.scss
+++ b/src/sass/paragon.scss
@@ -1,6 +1,7 @@
 @import "vendor/vendor";
 @import "base/base";
 @import "modules/modules";
+@import "dashboard/dashboard";
 
 @font-face {
   font-family: 'dashing-icons';
