--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -3,13 +3,12 @@ $sidebar-background: #354052;
 $app-background:     #e0e0e0;
 $sidebar-highlight:  #9D6CDE;
 $sidebar-text-color: $white;
+$sidebar-width: 12rem;
 
 $header-padding: 0.5rem;
+$header-height: 5rem;
 $half-padding: 0.5rem;
-$full-padding: 1.0rem;
-
-//Extends
-%icon-white { i:before { color: $white; } }
+$full-padding: $grid-gutter;//1rem;
 
 //Theme
 // .app    { background-color: $app-background; }
@@ -17,35 +16,31 @@ $full-padding: 1.0rem;
   background-color: $sidebar-background;
   overflow: hidden;
   z-index: 3;
+  display: flex;
+  align-items: center;
+  padding: $header-padding;
+  position: relative;
+  grid-column: 1 / -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  clear: both;/*fallback*/
+  height: $header-height;
+  max-height: $header-height;
+  margin: 0;
+
+  .title, .spacer { display: none; }//hidden unless "fullscreen" is applied
 
   @media #{$tablet} {
     background-color: $white;
   }
 }
 
-//Structure
-.content {
-  max-width: $global-content-width;
-  margin: auto;
-  &.content--reader-width {//move this to base?
-    max-width: 600px;
-  }
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  padding: $header-padding;
-  position: relative;
-
-  .title, .spacer { display: none; }//hidden unless "fullscreen" is applied
-}
-
 .app {
   float: right;/*fallback*/
-  height: calc(100vh - 5rem);
-  // overflow: auto;/*for content*/
-  margin-top: 5rem;
+  height: calc(100vh - #{$header-height});
+  margin-top: $header-height;
   padding: 1rem;
   -webkit-overflow-scrolling: touch;
 
@@ -54,48 +49,23 @@ $full-padding: 1.0rem;
 
   @media #{$tablet} {
     grid-column: 2 / 3;
-    width: calc(100% - 12rem);/*fallback*/
+    width: calc(100% - #{$sidebar-width});/*fallback*/
   }
 }
 
-.sidebar {
-  float: left;/*fallback*/
-  min-height: calc(100vh - 5rem);
-  min-width: 12rem;
-  position: fixed;
-  left: 0;
-  top: 5rem;
-
-  display: none;
-
-  @media #{$tablet} {
-    display: flex;
+//Structure
+.content {
+  max-width: $global-content-width;
+  margin: auto;
+  &.content--reader-width {//move this to base?
+    max-width: $global-content-width / 2;
   }
-}
-
-.mobile-sidebar {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 90%;
 }
 
 .grid-phoenix {
   display: grid;
-  grid-template-columns: 12rem 1fr;
+  grid-template-columns: $sidebar-width 1fr;
   margin: 0 auto;
-}
-
-.header {
-  grid-column: 1 / -1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  clear: both;/*fallback*/
-  height: 5rem;
-  max-height: 5rem;
-  margin: 0;
 }
 
 @supports (display: grid) { .grid-phoenix > * { width: auto; } }
