Start adding templates

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -217,7 +217,7 @@ body {
 /* Sidebar Icon
   ================================================== */
 
-.mobile-sidebar {
+.example-mobile-sidebar {
   .button--sidebar-icon {
     border-radius: 5px 0 0 5px;
     background-color: $gray-100;
