--- a/src/sass/paragon.scss
+++ b/src/sass/paragon.scss
@@ -2,6 +2,7 @@
 @import "base/base";
 @import "modules/modules";
 @import "dashboard/dashboard";
+@import "experimental/experimental";
 
 @font-face {
   font-family: 'dashing-icons';
